# asm-math

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  dependencies.cmake
.github/workflows/: unit-tests.yml
asm-math/: CMakeLists.txt
asm-math/include/: MathConcepts.h  Scalars.h  Scalars.tpp
asm-math/src/scalars/: add.asm  arithmetic.nasm
benchmark-suite/: CMakeLists.txt
benchmark-suite/src/: SampleBenchmark.cpp
playground/: CMakeLists.txt
playground/src/: main.cpp
test-suite/: CMakeLists.txt
test-suite/include/: Utils.h
test-suite/src/: MathConceptsTests.cpp  SampleTest.cpp  ScalarTests.cpp
